--- a/dark_theme.qss
+++ b/dark_theme.qss
@@ -26,3 +26,35 @@ QTextEdit {
 	margin-bottom: 5px;
 	padding: 5px;
 }
+
+QScrollBar:vertical {
+     border: none;
+     background: "#121212";
+     width: 15px;
+     margin: 22px 0 22px 0;
+ }
+ QScrollBar::handle:vertical {
+     background: "#212121";
+     min-height: 20px;
+ }
+ QScrollBar::add-line:vertical {
+     border: none;
+     background: "#191919";
+     height: 20px;
+     subcontrol-position: bottom;
+     subcontrol-origin: margin;
+ }
+
+ QScrollBar::sub-line:vertical {
+     border: none;
+     background: "#191919";
+     height: 20px;
+     subcontrol-position: top;
+     subcontrol-origin: margin;
+ }
+ QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical {
+     border: 2px solid "#212121";
+     width: 3px;
+     height: 3px;
+     background: "#212121";
+ }
